PFM-246 fix alignment on drop down labels
Drop down labels have been center aligned.
Fixed create programming page drop down label.

--- a/src/app/pfm-coreui/form-inputs/dropdown/dropdown.component.scss
+++ b/src/app/pfm-coreui/form-inputs/dropdown/dropdown.component.scss
@@ -1,12 +1,18 @@
 .pfm-dropdown-section{
   display: flex;
   flex-direction: row;
-  align-items: center;
 }
 
 .pfm-label {
   display: flex;
   padding-right: 5px;
+
+}
+
+label{
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .pfm-dropdown{
